static/css/styles.css
/*Generic Styling*/
/*Font family for the body*/
body {
  font-family: Arial, 'sans-seriff';
  min-height: 100%;
}

.main-container {
    min-height: 40vh;
}

.center-text {
    text-align: center;
}

.card-body {
    text-align: center;
}

/*NAVBAR*/
/*Font size, cursor and color transition settings for navbar branding*/

nav {
    margin-bottom: 20px;
}
.navbar-brand .fa-mug-hot {
    font-size: 32px;
    transition-duration: .5s;
    transition-timing-function: ease-in-out;
    cursor: pointer;
    transform: translateY(-3px);
}

/*color and scale changes*/
.fa-mug-hot:hover {
    color: red;
    transform: scale(1.1)
}

/*font-size for navbar headings*/
.navbar .nav-item {
   font-size: 25px;
}

/*Styling for the number of items in cart*/
.badge {
    padding-left: 9px;
    padding-right: 9px;
    border-radius: 66%;
    line-height: 20px;
}

.row.row-flex {
    display: flex;
    flex-wrap: wrap;
    margin-top: 30px;
}


/*MESSAGES*/
.messages {
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
}

/*Blog*/
.blog-border {
    background-color: rgba(0, 0, 0, 0.9);
    color: white;
    width: 100%;
    border: 3px solid #057af9;
    padding: 20px;
    margin: 5px;
    text-align: center;
}


.img-blogpost{
    height: 300px;
    width: 100%;
}



.img-circle{
    width:70%;;
    height: 100px; 
    border-radius: 55%;
    margin-top: 0;
    margin-bottom: 15px;
    display: block;
    margin-left: 15%;
    margin-right: 15%;
}

/*Add comment button for both blog and coffee pages*/
.center-btn-add {
    width: 40%;
    margin-left: 30%;
    margin-right: 30%;
    margin-top: 40px;
    margin-bottom: 40px;
}

/*btn to return to blog post listings*/
.center-btn-return {
    width: 14%;
    margin-left: 43%;
    margin-right: 43%;
}

@media (min-width:641px) {
    .img-circle {
        margin-top:45%;
    }
}

/*USER COMMENTS*/
.comment {
    border: black 1px solid;
    padding: 10px;
    
}

.comment-wrap {
    margin-bottom: 15px;
}
/*AUTH FORMS*/
.auth_wrapper {
    text-align: center;
}/*Styling for the auth forms wrappers to allow forms to be centred */



.auth_form {
    display: inline-block;
    padding: 15px;
    margin: 50px auto;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.9);
    color: white;
    border-radius: 15%;
}/*Styling for the login and registration forms  */

/*FOOTER*/
footer{
    background-color: #057af9;
    color: white;
    width: 100%;
}/*Sets the height,margin and background color*/

.footer-social {
    width: 100%;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.4);
    margin-bottom: 0;
}
.footer-social li {
    display: inline;
    color: white;
    font-size: 20px;
}

.fa-facebook-f, .fa-twitter, .fa-pinterest, .fa-youtube{
    color: white;
}

.fa-facebook-f:hover, 
.fa-twitter:hover, 
.fa-pinterest:hover, 
.fa-youtube:hover {
    color: #057af9;
}

#map {
    margin: 35px;
    height: 250px;
    border: 2px solid black;
}

.footer-text {
    padding: 10px;
    margin: 35px;
    text-align: center;
}


/*INDEX.HTML*/
/*Image Carousel*/
.slide-container {
    position: relative;
    margin: 10px;
}

.slide img {
    width: 100%;
    height: 600px;
}

.index-icons {
    height: 300px;
    width: auto;
    background-color: black;
    color: white;
    font-weight: lighter;
    text-align: center;
    padding: 15px;
    margin: 10px;
}

.fa-coffee,.fa-eye,.fa-lock{
    color: white;
    background: black;
    transition-duration: .5s;
    transition-timing-function: ease-in-out
}
.fa-coffee:hover,
.fa-eye:hover,
.fa-lock:hover {
    color: #057af9;
    transform: scale(1.1);
}

.fa-index {
    text-align: center;
    font-size: 95px;
}



/*ALL_COFFEE.HTML*/
.card {
    margin: 25px;
}

/*COFFEEREVIEW.HTML*/

}

    

